contrast error fix

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -474,7 +474,7 @@ to {opacity: 1}
     font-weight: bold;
     font-size: 1rem;
     background-color: hsl(122, 39%, 50%);
-    color: white;
+    color: black;
     border: none;
     border-radius: 5px;
     cursor: pointer;
